# relic

./: .gitignore  LICENSE  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  run_tests.sh  turbo.json
apps/web/: Dockerfile  next.config.js  package.json  tailwind.config.ts
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/lib/: api.ts  sse.ts  (+1 more)
services/scanner/: README.md  auditai.db  pyproject.toml  requirements-dev.txt  requirements.txt
services/scanner/app/: cli.py  config.py  constants.py  database.py  main.py  models.py  pdf.py  policy.py  routes.py  sse.py  store.py
services/scanner/app/ai/: analyzer.py  clients.py  models.py  prompt_loader.py  routes.py  schema.py  utils.py  validation.py
services/scanner/app/ai/prompts/: security_report_system_v1.txt
services/scanner/app/scanner/: cookies_checks.py  cors_checks.py  crawler.py  engine.py  header_checks.py  http_client.py  models.py  normalizer.py  path_discovery.py  port_scanner.py  scope.py  scoring.py  tls_checks.py  vuln_checks.py  waf_detection.py  xss_detector.py
services/scanner/tests/: conftest.py  test_scanner.py  test_waf_detection.py
services/scanner/tests/integration/: test_scan_api.py
services/scanner/tests/unit/: test_ai_analyzer.py  test_crawler.py  test_header_validator.py  test_models.py  test_pdf_generator.py  test_policy.py  test_prompt_loader.py  test_scanner_engine.py  test_sqli_detector.py  test_ssl_validator.py  test_vuln_checks.py  test_xss_detector.py
services/scanner/tests/unit/ai/: __init__.py  test_ai_validation.py
tests/: verify_robustness.py
(+10 files in other folders)
